tests/parser/bad/cmodule-version-number-library-name.scilla
scilla_version 0

library TestLib

(* missing a contract *)
